From version 0.5.13 to ?
- updated sipdigest to use sipwitch server library.

From version 0.5.12 to 0.5.13
- introduction of /etc/siprealm to set hash type and realm.

From version 0.5.11 to 0.5.12
- user is always multi-target capable.
- local devices not "forwarded" in forward module.
- services can have profiles.
- device specific "profile" added for services.
- admin profile level support.
- var lib path to store future digests and other settings.
- fixes for anonymous public inbound callers.
- lots of man pages added.

From version 0.5.10 to 0.5.11
- pedantic fixes for strict aliasing and gcc 4.4.
- added library configuration script.

From version 0.5.9 to 0.5.10
- missing man page in dist tarball.

From version 0.5.8 to 0.5.9
- remove snmp from sipwitch, will be in switchroom.
- remove swig from sipwitch, will be added where needed.

From version 0.5.7 to 0.5.8
- detect registration from ephemeral ports.
- auto-detect interfaces and local subnets.

From version 0.5.6 to 0.5.7
- ability to disable install of init.d.
- fix for redirected invite identity vs external call request.
- fix for cidr allocate size.

From version 0.5.5 to 0.5.6
- java packaging policies can be passed through configure.
- unneeded patches removed from rpm spec file.
- network identity saved in registry to make it easier to calculate nat.
- network and proxy peer now auto-detected from access policy control.
- basic rtp proxy peer detection part of core server.
- rtp media proxy will be integrated in core server, rtpproxy plugin removed.
- refer state processing for call transfers.

From verison 0.5.4 to 0.5.5
- python swig binaries now placed correctly.
- new init script has locking.  Status and condrestart added.
- new spec file for rpm builds.
- new --with-initrddir and default for /etc/rc.d/init.d.
- better python and php support for packaging.

From version 0.5.3 to 0.5.4
- some build notes.
- bugfix for setting domain identities in "from" 

From version 0.5.2 to 0.5.3